Completed second challenge

--- a/index.html
+++ b/index.html
@@ -14,14 +14,17 @@
 
     <!--First challenge section-->    
         <div id = "firstChallenge">
-            <h2>Challenge 1</h2>
+            <h2>Student Grade Generator</h2>
             <p>Press the button below to display prompt window</p>
             <button onclick="promptUser()">Click Me</button> 
         </div>
     
     <!--Second challenge section-->
         <div id = "secondChallenge">
-            <h2>Challenge 2</h2>
+            <h2>Speed Detector</h2>
+            <input type="number" placeholder="Enter Speed" id="speedBox">
+            <button onclick="calculateDelimiter()">Detect</button><br>
+            <p id="answer"></p>
         </div>
 
 
