--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>First Code Challenge</title>
-    <script src = "./index.js"></script>
     <link rel = 'stylesheet' href = "./style.css">
 </head>
 <body>
@@ -27,6 +26,17 @@
             <p id="answer"></p>
         </div>
 
+    <!--Third challnge section-->
+        <div id="thirdChallenge">
+            <h2>Net Salary Calculator</h2>
+            <input type="number" placeholder="Enter Gross Salary" id="salary">
+            <button onclick="salary()">Calculate</button>
+            <p id="Grosssalary"></p>
+            <p id="NHIF"></p>
+            <p id="PAYE"></p>
+        </div>
+    
+        <script src = "./index.js"></script>
 
 </body>
 </html>
