Completed code challenge

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <!--Second challenge section-->
         <div id = "secondChallenge">
             <h2>Speed Detector</h2>
+            <p>Please enter the speed in the box below: </p>
             <input type="number" placeholder="Enter Speed" id="speedBox">
             <button onclick="calculateDelimiter()">Detect</button><br>
             <p id="answer"></p>
@@ -29,11 +30,14 @@
     <!--Third challnge section-->
         <div id="thirdChallenge">
             <h2>Net Salary Calculator</h2>
-            <input type="number" placeholder="Enter Gross Salary" id="salary">
+            <p>Please enter your monthly gross salary below: </p>
+            <input type="number" placeholder="Monthly Gross Salary" id="salary">
             <button onclick="salary()">Calculate</button>
             <p id="Grosssalary"></p>
             <p id="NHIF"></p>
             <p id="PAYE"></p>
+            <p id="NSSF"></p>
+            <p id="Netpay"></p>
         </div>
     
         <script src = "./index.js"></script>
